[gd_scene load_steps=12 format=1]

[ext_resource path="res://gui/satchel_control.gd" type="Script" id=1]
[ext_resource path="res://gui/satchel_sprite_handler.scn" type="PackedScene" id=2]
[ext_resource path="res://objects/rocks/rock_sprite_handler.scn" type="PackedScene" id=3]

[sub_resource type="Animation" id=5]

resource/name = "Hold"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("rock_0:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 67, 72 ), Vector2( 68, 16 ) ]
}

[sub_resource type="Animation" id=1]

resource/name = "Push"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("rock_0:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2, 0.4, 0.6 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -24, 32 ), Vector2( 6, 19 ), Vector2( 37, 20 ), Vector2( 67, 72 ) ]
}

[sub_resource type="Animation" id=3]

resource/name = "Swap_1"
length = 0.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("rock_1:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2, 0.4 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 42, 56 ), Vector2( 57, 54 ), Vector2( 68, 72 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("rock_0:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( 67, 72 ) ]
}

[sub_resource type="Animation" id=4]

resource/name = "Swap_2"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("rock_1:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.3, 0.5 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 68, 72 ), Vector2( 43, 75 ), Vector2( 43, 57 ) ]
}

[sub_resource type="Animation" id=7]

resource/name = "Throw"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("rock_0:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 68, 16 ), Vector2( -202, 92 ) ]
}

[sub_resource type="Animation" id=6]

resource/name = "Hold"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("rock_1:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 43, 57 ), Vector2( 44, 17 ) ]
}

[sub_resource type="Animation" id=2]

resource/name = "Push"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("rock_1:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2, 0.4, 0.6 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -24, 32 ), Vector2( 6, 19 ), Vector2( 37, 20 ), Vector2( 42, 56 ) ]
}

[sub_resource type="Animation" id=8]

resource/name = "Throw"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("rock_1:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 44, 15 ), Vector2( -253, 33 ) ]
}

[node name="satchel_control" type="Container"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 0.0
margin/right = 73.0
margin/bottom = 61.0
script/script = ExtResource( 1 )

[node name="sprite_handler" parent="." instance=ExtResource( 2 )]

transform/pos = Vector2( 55, 50 )
transform/scale = Vector2( 2, 2 )

[node name="rock_0" parent="." instance=ExtResource( 3 )]

transform/pos = Vector2( -78, 64 )
transform/scale = Vector2( 2, 2 )

[node name="rock_1" parent="." instance=ExtResource( 3 )]

transform/pos = Vector2( -130, 59 )
transform/scale = Vector2( 2, 2 )

[node name="rock_anims_0" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Hold = SubResource( 5 )
anims/Push = SubResource( 1 )
anims/Swap_1 = SubResource( 3 )
anims/Swap_2 = SubResource( 4 )
anims/Throw = SubResource( 7 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="rock_anims_1" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Hold = SubResource( 6 )
anims/Push = SubResource( 2 )
anims/Swap_1 = SubResource( 3 )
anims/Swap_2 = SubResource( 4 )
anims/Throw = SubResource( 8 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""


